Add html structure for plate

--- a/index.html
+++ b/index.html
@@ -15,5 +15,14 @@
 </head>
 <body>
     
+    <div class="plate-area">
+       <div id="plate">
+       </div>
+    </div>
+
+    <div class="dish-name">
+       Dish name here.
+    </div>
+
 </body>
 </html>
