Replace circle with sections so images can be added. Adjusted positioning.

--- a/index.html
+++ b/index.html
@@ -15,15 +15,16 @@
 </head>
 <body>
     
-    <div class="plate-area">
-       <div id="plate">
-          
-       </div>
+
+    <div id="plate-area">
+        <div id="veg-portion"></div>
+        <div id="protein-portion"></div>
+        <div id="carb-portion"></div>
     </div>
 
     <div class="dish-name">
-       Dish name here.
-    </div>
+        Dish name here.
+     </div>
 
 </body>
 </html>
