Add google fonts, heading and nav bar structure and styling.

--- a/index.html
+++ b/index.html
@@ -7,14 +7,29 @@
     <!-- font awesome and google fonts -->
     <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.7.2/css/all.css"
     integrity="sha384-fnmOCqbTlWIlj8LyTjo7mOUStjsKC4pOpQbqyi7RrhN7udi9RwhKkMHpvLbHG9Sr" crossorigin="anonymous">
-    <link href="https://fonts.googleapis.com/css?family=Raleway%7CRighteous" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css2?family=Quattrocento&display=swap" rel="stylesheet">
 
     <link rel="stylesheet" href="assets/css/style.css">
    
     <title>Meal Generator</title>
 </head>
 <body>
+ 
+    <header>
+      
+            <h1 id="heading">Balanced Meal Generator</h1>
     
+        <nav>
+            <ul id="menu">
+                <li>
+                    <a href="quiz.html">Nutrition Quiz</a>
+                </li>
+                <li>
+                    <a href="index.html" class="active">Home</a>
+                </li>
+            </ul>
+        </nav>
+    </header>
 
     <div id="plate-area">
         <div id="veg-portion"></div>
@@ -22,9 +37,7 @@
         <div id="carb-portion"></div>
     </div>
 
-    <div class="dish-name">
-        Dish name here.
-     </div>
+
 
 </body>
 </html>
