Add 'inspire' button and basic styling.

--- a/index.html
+++ b/index.html
@@ -35,6 +35,9 @@
         <div id="veg-portion"></div>
         <div id="protein-portion"></div>
         <div id="carb-portion"></div>
+        <button type="button" id="inspire-button">
+        Inspire me!</button>
+        
     </div>
 
 
