Add veg section of 'generate meal' function

--- a/index.html
+++ b/index.html
@@ -35,12 +35,12 @@
         <div id="veg-portion"></div>
         <div id="protein-portion"></div>
         <div id="carb-portion"></div>
-        <button type="button" id="inspire-button">
+        <button type="button" class="inspire-button" onclick="generateMeal()";>
         Inspire me!</button>
         
     </div>
 
 
-
+    <script src="assets/js/script.js"></script>
 </body>
 </html>
