Add images and veg and protein sections of generate meal function.

--- a/index.html
+++ b/index.html
@@ -37,8 +37,10 @@
         <div id="carb-portion"></div>
         <button type="button" class="inspire-button" onclick="generateMeal()";>
         Inspire me!</button>
+        <div id="result"></div>
         
     </div>
+
 
 
     <script src="assets/js/script.js"></script>
