Added javascript to generate dish names with images. Added objects to arrays.

--- a/index.html
+++ b/index.html
@@ -37,7 +37,15 @@
         <div id="carb-portion"></div>
         <button type="button" class="inspire-button" onclick="generateMeal()";>
         Inspire me!</button>
-        <div id="result"></div>
+        <div id="carb-result">
+            <p>Carbohydrate:</p>
+        </div>
+        <div id="protein-result">
+            <p>Protein:</p>
+        </div>
+        <div id="veg-result">
+            <p>Vegetables:</p>
+        </div>
         
     </div>
 
