Additional styling adjustments

--- a/index.html
+++ b/index.html
@@ -35,10 +35,14 @@
         <div id="veg-portion"></div>
         <div id="protein-portion"></div>
         <div id="carb-portion"></div>
+    </div>
+
+    <div id="button-and-results">
         <button type="button" class="inspire-button" onclick="generateMeal()";>
         Inspire me!</button>
         <div id="carb-result">
             <p>Carbohydrate:</p>
+            
         </div>
         <div id="protein-result">
             <p>Protein:</p>
@@ -46,7 +50,6 @@
         <div id="veg-result">
             <p>Vegetables:</p>
         </div>
-        
     </div>
 
 
