Add do while loop for dietary options

--- a/index.html
+++ b/index.html
@@ -48,11 +48,11 @@
        <br>
        <br>
         <label for="vegetarian">Vegetarian</label>
-        <input type="radio" name="diet" id="vegetarian" value="vegetarian" required>
+        <input type="radio" name="diet" id="vegetarian-diet" value="vegetarian" required>
         <label for="vegan">Vegan</label>
-        <input type="radio" name="diet" id="vegan" value="vegan" required>
+        <input type="radio" name="diet" id="vegan-diet" value="vegan" required>
         <label for="both">Paleo</label>
-        <input type="radio" name="diet" id="paleo" value="paleo" required>
+        <input type="radio" name="diet" id="paleo-diet" value="paleo" required>
         <input class="submit-button" type="submit" value="Submit">
         
      </section>
