--- a/index.html
+++ b/index.html
@@ -35,25 +35,16 @@
 
      <section class="form-section">
          <form class="signup-form" method="POST" action="https://formdump.codeinstitute.net/"></form>
-       <h2>1. Submit your basic info and dietary requirements</h2>
-        <label for="fname">First Name</label>
-        <input type="text" id="fname" name="first_name" required>
-        <label for="lname">Last Name</label>
-        <input class="lname" name="last_name" type="text" id="lname" required>
-        <label for="email">Email Address</label>
-        <input  type="email" class="email" name="email_address" id="email" required>
-       <br>
-       <br>
-       Dietary Requirements:
-       <br>
-       <br>
+       <h2>1. Select your dietary requirements</h2>
+        <br>
+        <label for="omnivore">None</label>
+        <input type="radio" name="diet" id="omnivore" value="omnivore" required checked>
         <label for="vegetarian">Vegetarian</label>
         <input type="radio" name="diet" id="vegetarian-diet" value="vegetarian" required>
         <label for="vegan">Vegan</label>
         <input type="radio" name="diet" id="vegan-diet" value="vegan" required>
         <label for="both">Paleo</label>
         <input type="radio" name="diet" id="paleo-diet" value="paleo" required>
-        <input class="submit-button" type="submit" value="Submit">
         
      </section>
   
