Adjust css to improve positioning

--- a/index.html
+++ b/index.html
@@ -31,10 +31,10 @@
         </nav>
     </header>
 
-  <!--sign up form--> 
+  <!--dietary requirements form--> 
 
      <section class="form-section">
-         <form class="signup-form" method="POST" action="https://formdump.codeinstitute.net/"></form>
+    
        <h2>1. Select your dietary requirements</h2>
         <br>
         <label for="omnivore">None</label>
