Build out generate meal function to include food category in results

--- a/index.html
+++ b/index.html
@@ -56,9 +56,9 @@
     </div>
 
     <div id="button-and-results">
-        <h2>2. Get inspired:</h2>
-        <button type="button" class="inspire-button" onclick="generateMeal()";>
-        Inspire me!</button>
+        <h2>2. Get inspired: &nbsp&nbsp<button type="button" class="inspire-button" onclick="generateMeal()";>
+            Inspire me!</button></h2>
+        
         <div id="carb-result">
             <p>Carbohydrate:</p>
             
