Start questions for quiz. Add basic quiz structure to quiz.js file.

--- a/quiz.html
+++ b/quiz.html
@@ -1,1 +1,30 @@
-quiz here
+<!DOCTYPE html>
+<html lang="en">
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+
+    <!-- font awesome and google fonts -->
+    <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.7.2/css/all.css"
+    integrity="sha384-fnmOCqbTlWIlj8LyTjo7mOUStjsKC4pOpQbqyi7RrhN7udi9RwhKkMHpvLbHG9Sr" crossorigin="anonymous">
+    <link href="https://fonts.googleapis.com/css2?family=Quattrocento&display=swap" rel="stylesheet">
+
+    <link rel="stylesheet" href="assets/css/style.css">
+   
+   
+</head>
+<body>
+
+    <h1>Nutrition quiz</h1>
+    <h2>How much do you know about nutrition?</h2>
+
+   <div id="question-area">
+
+   </div> 
+
+   <div id="results-area">
+
+   </div>
+
+</body>
+</html>
