--- a/quiz.html
+++ b/quiz.html
@@ -31,11 +31,13 @@
     <input type="radio" id="q1c" required>
     <label for="q1d">Broccoli</label>
     <input type="radio" id="q1d" required>
+    <br>
+    <br>
    </div> 
 
    <div id="question-two">
 
-    Q1. "What is the recommended serving size of carb per meal?"
+    Q2. "What is the recommended serving size of carb per meal?"
     <br>
     <br>
     <label for="q2a">a fist size</label>
@@ -46,8 +48,70 @@
     <input type="radio" id="q2c" required>
     <label for="q2d">3/4 of a standard dinner plate</label>
     <input type="radio" id="q2d" required>
+    <br>
+    <br>
    </div> 
 
+   <div id="question-three">
+   Q3. "What is another word for courgette?"
+    <br>
+    <br>
+    <label for="q3a">Coriander</label>
+    <input type="radio" id="q3a" required>
+    <label for="q3b">Arugula</label>
+    <input type="radio" id="q3b" required>
+    <label for="q3c">Zuccini</label>
+    <input type="radio" id="q3c" required>
+    <label for="q3d">Kurkuma</label>
+    <input type="radio" id="q3d" required>
+    <br>
+    <br>
+   </div> 
+   <div id="question-four">
+   Q4. "What food is known for giving your skin a visible glow?"
+   <br>
+   <br>
+   <label for="q4a">Kale</label>
+   <input type="radio" id="q4a" required>
+   <label for="q4b">Carrot</label>
+   <input type="radio" id="q4b" required>
+   <label for="q4c">Chicken</label>
+   <input type="radio" id="q4c" required>
+   <label for="q4d">Bread</label>
+   <input type="radio" id="q4d" required>
+   <br>
+   <br>
+  </div> 
+  <div id="question-five">
+  Q5. "Which of the following is NOT one of the six essential nutrients"
+   <br>
+   <br>
+   <label for="q5a">Fats</label>
+   <input type="radio" id="q5a" required>
+   <label for="q5b">Protein</label>
+   <input type="radio" id="q5b" required>
+   <label for="q5c">Vitamins</label>
+   <input type="radio" id="q5c" required>
+   <label for="q5d">Sugar</label>
+   <input type="radio" id="q5d" required>
+   <br>
+   <br>
+  </div> 
+  <div id="question-six">
+    Q6. "Which of the following is NOT a legume?"
+     <br>
+     <br>
+     <label for="q6a">Chickpeas</label>
+     <input type="radio" id="q6a" required>
+     <label for="q6b">Bananas</label>
+     <input type="radio" id="q6b" required>
+     <label for="q6c">Kidney beans</label>
+     <input type="radio" id="q6c" required>
+     <label for="q6d">Lentils</label>
+     <input type="radio" id="q6d" required>
+     <br>
+     <br>
+    </div> 
 
 
    <div id="submit-button">
