Adjust quiz structure

--- a/quiz.html
+++ b/quiz.html
@@ -15,20 +15,31 @@
 </head>
 <body>
 
-    <h1>Nutrition quiz</h1>
-    <h2>How much do you know about nutrition?</h2>
+   
+    <nav>
+        <ul id="menu">
+            <li>
+                <a href="quiz.html">Nutrition Quiz</a>
+            </li>
+            <li>
+                <a href="index.html" class="active">Home</a>
+            </li>
+        </ul>
+    </nav>
 
+    <section id="quiz-area">
+        <h1>Nutrition quiz</h1>
    <div id="question-one">
 
-    Q1. "Which one of the following would be considered a protein?"
+    Q1. "Which one of the following would be considered a good source of protein?"
     <br>
     <br>
     <label for="q1a">Potato</label>
-    <input type="radio" id="q1a" required>
+    <input type="radio" id="q1a" required><br>
     <label for="q1b">Fish</label>
-    <input type="radio" id="q1b" required>
+    <input type="radio" id="q1b" required><br>
     <label for="q1c">Apple</label>
-    <input type="radio" id="q1c" required>
+    <input type="radio" id="q1c" required><br>
     <label for="q1d">Broccoli</label>
     <input type="radio" id="q1d" required>
     <br>
@@ -41,11 +52,11 @@
     <br>
     <br>
     <label for="q2a">a fist size</label>
-    <input type="radio" id="q2a" required>
+    <input type="radio" id="q2a" required><br>
     <label for="q2b">a finger size</label>
-    <input type="radio" id="q2b" required>
+    <input type="radio" id="q2b" required><br>
     <label for="q2c">1/2 of a standard dinner plate</label>
-    <input type="radio" id="q2c" required>
+    <input type="radio" id="q2c" required><br>
     <label for="q2d">3/4 of a standard dinner plate</label>
     <input type="radio" id="q2d" required>
     <br>
@@ -57,11 +68,11 @@
     <br>
     <br>
     <label for="q3a">Coriander</label>
-    <input type="radio" id="q3a" required>
+    <input type="radio" id="q3a" required><br>
     <label for="q3b">Arugula</label>
-    <input type="radio" id="q3b" required>
+    <input type="radio" id="q3b" required><br>
     <label for="q3c">Zuccini</label>
-    <input type="radio" id="q3c" required>
+    <input type="radio" id="q3c" required><br>
     <label for="q3d">Kurkuma</label>
     <input type="radio" id="q3d" required>
     <br>
@@ -72,11 +83,11 @@
    <br>
    <br>
    <label for="q4a">Kale</label>
-   <input type="radio" id="q4a" required>
+   <input type="radio" id="q4a" required><br>
    <label for="q4b">Carrot</label>
-   <input type="radio" id="q4b" required>
+   <input type="radio" id="q4b" required><br>
    <label for="q4c">Chicken</label>
-   <input type="radio" id="q4c" required>
+   <input type="radio" id="q4c" required><br>
    <label for="q4d">Bread</label>
    <input type="radio" id="q4d" required>
    <br>
@@ -87,11 +98,11 @@
    <br>
    <br>
    <label for="q5a">Fats</label>
-   <input type="radio" id="q5a" required>
+   <input type="radio" id="q5a" required><br>
    <label for="q5b">Protein</label>
-   <input type="radio" id="q5b" required>
+   <input type="radio" id="q5b" required><br>
    <label for="q5c">Vitamins</label>
-   <input type="radio" id="q5c" required>
+   <input type="radio" id="q5c" required><br>
    <label for="q5d">Sugar</label>
    <input type="radio" id="q5d" required>
    <br>
@@ -102,11 +113,11 @@
      <br>
      <br>
      <label for="q6a">Chickpeas</label>
-     <input type="radio" id="q6a" required>
+     <input type="radio" id="q6a" required><br>
      <label for="q6b">Bananas</label>
-     <input type="radio" id="q6b" required>
+     <input type="radio" id="q6b" required><br>
      <label for="q6c">Kidney beans</label>
-     <input type="radio" id="q6c" required>
+     <input type="radio" id="q6c" required><br>
      <label for="q6d">Lentils</label>
      <input type="radio" id="q6d" required>
      <br>
@@ -122,7 +133,7 @@
    <div id="quiz-result">
        
    </div>
-
+</section>
 
     <script src="assets/js/quiz.js"></script>
 </body>
