Add result message to calculate score function

--- a/quiz.html
+++ b/quiz.html
@@ -19,10 +19,10 @@
     <nav>
         <ul id="menu">
             <li>
-                <a href="quiz.html">Nutrition Quiz</a>
+                <a href="quiz.html" class="active">Nutrition Quiz</a>
             </li>
             <li>
-                <a href="index.html" class="active">Home</a>
+                <a href="index.html">Home</a>
             </li>
         </ul>
     </nav>
@@ -126,13 +126,12 @@
 
 
    <div id="submit-button">
-    <button type="button" class="submit-button-style" onclick="calculateScore()";>
-        Submit</button>
+    <button type="button" class="inspire-button" onclick="calculateScore()">
+        Submit!</button>
    </div>
 
-   <div id="quiz-result">
-       
-   </div>
+   <div id="quiz-result"></div>
+   <div id="result-message"></div>
 </section>
 
     <script src="assets/js/quiz.js"></script>
