--- a/quiz.html
+++ b/quiz.html
@@ -128,6 +128,8 @@
    <div id="submit-button">
     <button type="button" class="inspire-button" onclick="calculateScore()">
         Submit!</button>
+        <button type="button" class="inspire-button" onclick="refreshPage()">
+            Refresh</button>
    </div>
 
    <div id="quiz-result"></div>
