Build out media query for mobile device and adjust styling throughout site

--- a/quiz.html
+++ b/quiz.html
@@ -26,9 +26,9 @@
             </li>
         </ul>
     </nav>
-
+    <h1 id="heading">Nutrition quiz</h1>
     <section id="quiz-area">
-        <h1>Nutrition quiz</h1>
+        
    <div id="question-one">
 
     Q1. "Which one of the following would be considered a good source of protein?"
@@ -131,9 +131,12 @@
         <button type="button" class="inspire-button" onclick="refreshPage()">
             Refresh</button>
    </div>
-
-   <div id="quiz-result"></div>
-   <div id="result-message"></div>
+   <div id=result-and-message-container>
+   <div id=result-and-message>
+   <p id="quiz-result"></p>
+   <p id="result-message"></p>
+   </div>
+   </div>
 </section>
 
     <script src="assets/js/quiz.js"></script>
