Fix footer positioning and styling

--- a/index.html
+++ b/index.html
@@ -14,6 +14,8 @@
     <title>Meal Generator</title>
 </head>
 <body>
+    <div id="page-container">
+    <div id="content-wrap">
  
     <header>
 
@@ -73,7 +75,8 @@
         </div>
     </div>
     
-    <footer>
+    </div>
+    <footer id="footer">
         <ul class="social-networks">
             <li>
                 <a href="https://www.facebook.com/" target="_blank" rel="noopener" aria-label="Visit our Facebook page (opens in a new tab)"><i class="fab fa-facebook"></i></a>
@@ -86,6 +89,7 @@
             </li>
         </ul>
     </footer>
+    </div>
 
     <script src="assets/js/script.js"></script>
 </body>
