Adjust mobile media query to correct header and menu crossover, footer positioning and tweaked general div positioning so that all divs are better aligned,

--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
     <div id="page-container">
     <div id="content-wrap">
  
-    <header>
+    <header id="header">
 
     <!-- Page heading and navigation bar -->      
     <h1 id="heading">Balanced Meal Generator</h1>
@@ -40,14 +40,14 @@
         <h2>1. Select your dietary requirements</h2>
         <br>
         <label for="omnivore">None</label>
-        <input type="radio" name="diet" id="omnivore" value="omnivore" required checked>
+        <input type="radio" name="diet" id="omnivore" value="omnivore" required checked><br>
         <label for="vegetarian">Vegetarian</label>
-        <input type="radio" name="diet" id="vegetarian-diet" value="vegetarian" required>
+        <input type="radio" name="diet" id="vegetarian-diet" value="vegetarian" required><br>
         <label for="vegan">Vegan</label>
-        <input type="radio" name="diet" id="vegan-diet" value="vegan" required>
+        <input type="radio" name="diet" id="vegan-diet" value="vegan" required><br>
         <label for="both">Paleo</label>
         <input type="radio" name="diet" id="paleo-diet" value="paleo" required>
-        
+    
     </section>
 
     <!-- Plate area displaying generated meals -->
