--- a/quiz.html
+++ b/quiz.html
@@ -35,13 +35,13 @@
     <br>
     <br>
     <label for="q1a">Potato</label>
-    <input type="radio" id="q1a" required><br>
+    <input type="radio" id="q1a" name="q1" required><br>
     <label for="q1b">Fish</label>
-    <input type="radio" id="q1b" required><br>
+    <input type="radio" id="q1b" name="q1" required><br>
     <label for="q1c">Apple</label>
-    <input type="radio" id="q1c" required><br>
+    <input type="radio" id="q1c" name="q1" required><br>
     <label for="q1d">Broccoli</label>
-    <input type="radio" id="q1d" required>
+    <input type="radio" id="q1d" name="q1" required>
     <br>
     <br>
    </div> 
@@ -52,13 +52,13 @@
     <br>
     <br>
     <label for="q2a">a fist size</label>
-    <input type="radio" id="q2a" required><br>
+    <input type="radio" id="q2a" name="q2" required><br>
     <label for="q2b">a finger size</label>
-    <input type="radio" id="q2b" required><br>
+    <input type="radio" id="q2b" name="q2" required><br>
     <label for="q2c">1/2 of a standard dinner plate</label>
-    <input type="radio" id="q2c" required><br>
+    <input type="radio" id="q2c" name="q2" required><br>
     <label for="q2d">3/4 of a standard dinner plate</label>
-    <input type="radio" id="q2d" required>
+    <input type="radio" id="q2d" name="q2" required>
     <br>
     <br>
    </div> 
@@ -68,13 +68,13 @@
     <br>
     <br>
     <label for="q3a">Coriander</label>
-    <input type="radio" id="q3a" required><br>
+    <input type="radio" id="q3a" name="q3" required><br>
     <label for="q3b">Arugula</label>
-    <input type="radio" id="q3b" required><br>
+    <input type="radio" id="q3b" name="q3" required><br>
     <label for="q3c">Zuccini</label>
-    <input type="radio" id="q3c" required><br>
+    <input type="radio" id="q3c" name="q3" required><br>
     <label for="q3d">Kurkuma</label>
-    <input type="radio" id="q3d" required>
+    <input type="radio" id="q3d" name="q3" required>
     <br>
     <br>
    </div> 
@@ -83,13 +83,13 @@
    <br>
    <br>
    <label for="q4a">Kale</label>
-   <input type="radio" id="q4a" required><br>
+   <input type="radio" id="q4a" name="q4" required><br>
    <label for="q4b">Carrot</label>
-   <input type="radio" id="q4b" required><br>
+   <input type="radio" id="q4b" name="q4" required><br>
    <label for="q4c">Chicken</label>
-   <input type="radio" id="q4c" required><br>
+   <input type="radio" id="q4c" name="q4" required><br>
    <label for="q4d">Bread</label>
-   <input type="radio" id="q4d" required>
+   <input type="radio" id="q4d" name="q4" required>
    <br>
    <br>
   </div> 
@@ -98,13 +98,13 @@
    <br>
    <br>
    <label for="q5a">Fats</label>
-   <input type="radio" id="q5a" required><br>
+   <input type="radio" id="q5a" name="q5" required><br>
    <label for="q5b">Protein</label>
-   <input type="radio" id="q5b" required><br>
+   <input type="radio" id="q5b" name="q5" required><br>
    <label for="q5c">Vitamins</label>
-   <input type="radio" id="q5c" required><br>
+   <input type="radio" id="q5c" name="q5" required><br>
    <label for="q5d">Sugar</label>
-   <input type="radio" id="q5d" required>
+   <input type="radio" id="q5d" name="q5" required>
    <br>
    <br>
   </div> 
@@ -113,13 +113,13 @@
      <br>
      <br>
      <label for="q6a">Chickpeas</label>
-     <input type="radio" id="q6a" required><br>
+     <input type="radio" id="q6a" name="q6" required><br>
      <label for="q6b">Bananas</label>
-     <input type="radio" id="q6b" required><br>
+     <input type="radio" id="q6b" name="q6" required><br>
      <label for="q6c">Kidney beans</label>
-     <input type="radio" id="q6c" required><br>
+     <input type="radio" id="q6c" name="q6" required><br>
      <label for="q6d">Lentils</label>
-     <input type="radio" id="q6d" required>
+     <input type="radio" id="q6d" name="q6" required>
      <br>
      <br>
     </div> 
