Correct errors highlighted by W3c validator in index.html file

--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
 </head>
 <body>
     <div id="page-container">
-    <div id="content-wrap">
+        <div id="content-wrap">
  
     <header id="header">
 
@@ -41,11 +41,11 @@
         <br>
         <label for="omnivore">None</label>
         <input type="radio" name="diet" id="omnivore" value="omnivore" required checked><br>
-        <label for="vegetarian">Vegetarian</label>
+        <label for="vegetarian-diet">Vegetarian</label>
         <input type="radio" name="diet" id="vegetarian-diet" value="vegetarian" required><br>
-        <label for="vegan">Vegan</label>
+        <label for="vegan-diet">Vegan</label>
         <input type="radio" name="diet" id="vegan-diet" value="vegan" required><br>
-        <label for="both">Paleo</label>
+        <label for="paleo-diet">Paleo</label>
         <input type="radio" name="diet" id="paleo-diet" value="paleo" required>
     
     </section>
@@ -60,7 +60,7 @@
 
     <!-- Generate meal button and text results --> 
     <div id="button-and-results">
-        <h2>2. Get inspired: &nbsp&nbsp<button type="button" class="inspire-button" onclick="generateMeal()";>
+        <h2>2. Get inspired: &nbsp;&nbsp;<button type="button" class="inspire-button" onclick="generateMeal()">
             Inspire me!</button>
         </h2>
         
