Correct errors highlighted by W3c validator on quiz.html file

--- a/quiz.html
+++ b/quiz.html
@@ -11,7 +11,7 @@
 
     <link rel="stylesheet" href="assets/css/style.css">
    
-   
+    <title>Meal Generator</title>
 </head>
 <body>
 
@@ -27,7 +27,8 @@
         </ul>
     </nav>
     <h1 id="heading">Nutrition quiz</h1>
-    <section id="quiz-area">
+    
+    <div id="quiz-area">
         
    <div id="question-one">
 
@@ -137,7 +138,8 @@
    <p id="result-message"></p>
    </div>
    </div>
-</section>
+   </div>
+
 
 <footer>
     <ul class="social-networks">
