Fix result image and text display bug

--- a/quiz.html
+++ b/quiz.html
@@ -139,9 +139,9 @@
    <div id=result-and-message-container>
         <div id="result-image"></div>
         <div id=result-and-message>
-            outside ps
-            <p id="quiz-result">result pertentage here</p>
-            <p id="result-message">testing result messge</p>
+            <p id="quiz-result"></p>
+            <br>
+            <p id="result-message"></p>
     
         </div>
         </div>
