Finish commentary on quiz.js file

--- a/quiz.html
+++ b/quiz.html
@@ -31,7 +31,7 @@
     <div id="quiz-area">
     
     <div id ="input-section">  
-       <input required type="text" id="input_id" value="" placeholder="Enter first name"> 
+       <input type="text" id="input_id" value="" placeholder="Enter first name"> 
     </div>
 
    <div id="question-one">
